--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "ai-editing-nextjs-platform",
   "version": "1.0.0",
@@ -8,13 +7,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.0.0",
-    "postcss": "^8.0.0",
-    "tailwindcss": "^3.0.0"
+    "next": "^15.3.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
